#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([orientc], [0.9], [https://github.com/orientechnologies/orientc/issues])
AC_CONFIG_SRCDIR([src/orientc_reader.cpp])
AC_CONFIG_HEADERS([config.h])
LT_INIT([shared])
AM_INIT_AUTOMAKE([subdir-objects])
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_MAKE_SET
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 test/Makefile])
AC_OUTPUT
